--- a/functions/package.json
+++ b/functions/package.json
@@ -15,9 +15,12 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.3.0"
+    "firebase-functions": "^2.3.0",
+    "mkdirp": "^0.5.1",
+    "tree-kill": "^1.2.1"
   },
   "devDependencies": {
+    "@types/mkdirp": "^0.5.2",
     "firebase-functions-test": "^0.1.6",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
